--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <!-- <load ="partials/header.html" /> -->
 
     <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+      <h1>Home Work 10</h1>
+      <ul>
+        <li><a href="./1-timer.html">WORK-1 timer</a></li>
+        <li><a href="./2-snackbar.html">WORK-2 snackbar</a></li>
+      </ul>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
 
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
