--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/1-timer.css">
     <link rel="stylesheet" href="flatpickr.min.css">
     <link rel="stylesheet" href="iziToast.min.css">
 </head>
 <body>
-<button><a href="./index.html">GO Back</a></button>
+<button class="backBtn"><a class="link" href="./index.html">GO Back</a></button>
 
-    <input type="number" id="datetime-picker" />
+    <input class="input"
+    type="number" id="datetime-picker" />
 <button type="button" id="start-btn" disabled>Start</button>
 
 <div class="timer">
