--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/1-timer.css">
 </head>
 <body>
-    <button><a href="./index.html">Go back</a></button>
+  <button class="backBtn btn_style"><a class="link" href="./index.html">GO Back</a></button>
+
     <form class="form">
   <label>
     Delay (ms)
