--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -11,9 +11,11 @@
 <body>
 <button class="backBtn"><a class="link" href="./index.html">GO Back</a></button>
 
-    <input class="input"
-    type="number" id="datetime-picker" />
+<div class="input_conteiner">
+  <input class="input"
+  type="number" id="datetime-picker" />
 <button type="button" id="start-btn" disabled>Start</button>
+</div>
 
 <div class="timer">
   <div class="field">
