--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="flatpickr.min.css">
-    <link rel="stylesheet" href="iziToast.min.css">
+
+    <!-- ось ці посилання не потрібні(працює без них) -->
+    <!-- <link rel="stylesheet" href="flatpickr.min.css">
+    <link rel="stylesheet" href="iziToast.min.css"> -->
 </head>
 <body>
 <button class="backBtn"><a class="link" href="./index.html">GO Back</a></button>
@@ -37,7 +39,8 @@
 </div>
 
 <script src="./js/1-timer.js" type="module"></script>
-<script src="flatpickr.js"></script>
-<script src="iziToast.js"></script>
+<!-- тоже не потрібні посилання -->
+<!-- <script src="flatpickr.js"></script>
+<script src="iziToast.js"></script> -->
 </body>
 </html>
